[gd_scene load_steps=11 format=3 uid="uid://b1tpi2ms12dmx"]

[ext_resource type="Script" uid="uid://cfuo1o74q1j4b" path="res://Scripts/sword_enemy.gd" id="1_6dv18"]
[ext_resource type="Texture2D" uid="uid://b2paakn4rmqkv" path="res://Art/icon.svg" id="1_fn28w"]
[ext_resource type="Script" uid="uid://v4nlkn46p8aj" path="res://Scripts/state_machine.gd" id="3_e1cvk"]
[ext_resource type="Script" uid="uid://b1tndal8vtuip" path="res://Scripts/sword_enemy_default.gd" id="4_7cuhq"]
[ext_resource type="Script" uid="uid://orxk4u6ibkso" path="res://Scripts/sword_enemy_chase.gd" id="5_8fe5i"]
[ext_resource type="Script" uid="uid://bn87wwqajopv4" path="res://Scripts/sword_enemy_attack.gd" id="6_mpgwj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fn28w"]
size = Vector2(25.6, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6dv18"]
size = Vector2(31, 58)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1cvk"]
size = Vector2(32, 7)

[sub_resource type="Curve" id="Curve_mpgwj"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.87209314, 0.9101124), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[node name="SwordEnemy" type="CharacterBody2D" groups=["Enemy"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_6dv18")
health = 10.0
knockback_speed = Vector2(250, 25)

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.2, 0.5)
texture = ExtResource("1_fn28w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_fn28w")

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("RectangleShape2D_fn28w")

[node name="Sword" type="Area2D" parent="."]
position = Vector2(32, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword"]
shape = SubResource("RectangleShape2D_6dv18")
disabled = true

[node name="FloorDetector" type="Area2D" parent="."]
position = Vector2(31, 34)
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FloorDetector"]
shape = SubResource("RectangleShape2D_e1cvk")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_e1cvk")
initial_state = NodePath("Default")

[node name="Default" type="Node" parent="StateMachine" node_paths=PackedStringArray("Enemy")]
script = ExtResource("4_7cuhq")
Enemy = NodePath("../..")
speed = 50.0
metadata/_custom_type_script = "uid://b1tndal8vtuip"

[node name="Chase" type="Node" parent="StateMachine" node_paths=PackedStringArray("Enemy")]
script = ExtResource("5_8fe5i")
speed = 150.0
Enemy = NodePath("../..")
min_distance = 53.0
forget_timer = 2.0
skid_timer = 0.5
metadata/_custom_type_script = "uid://orxk4u6ibkso"

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("Enemy")]
script = ExtResource("6_mpgwj")
Enemy = NodePath("../..")
windup_timer = 0.1
attack_timer = 0.2
cooldown_timer = 0.2
metadata/_custom_type_script = "uid://bn87wwqajopv4"

[node name="KnockbackTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, 7)
target_position = Vector2(600, 0)

[node name="PlayerNotInSightTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="HitParticles" type="CPUParticles2D" parent="."]
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
local_coords = true
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 400.0
initial_velocity_max = 400.0
scale_amount_min = 3.0
scale_amount_max = 10.0
scale_amount_curve = SubResource("Curve_mpgwj")

[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_entered" from="Sword" to="." method="_on_sword_body_entered"]
[connection signal="timeout" from="KnockbackTimer" to="." method="_on_knockback_timer_timeout"]
